# Rora

./: .eslintrc.json  .gitignore  App.tsx  README.md  index.html  metadata.json  package.json  tsconfig.json  types.ts
components/: CodeEditor.tsx  StatusBadge.tsx
openspec/changes/add-agentic-test-generator/: tasks.md
openspec/changes/add-agentic-test-generator/specs/codelens-ui/: spec.md
openspec/changes/add-agentic-test-generator/specs/test-execution/: spec.md
openspec/changes/add-agentic-test-generator/specs/test-generation-agent/: spec.md
openspec/changes/add-agentic-test-generator/specs/test-panel/: spec.md
openspec/changes/archive/2025-12-31-add-agentic-test-generator/: design.md  proposal.md  tasks.md
openspec/specs/codelens-ui/: spec.md
openspec/specs/test-execution/: spec.md
openspec/specs/test-generation-agent/: spec.md
openspec/specs/test-panel/: spec.md
rora_agent/: README.md  pyproject.toml
rora_agent/rora_agent/: __init__.py  server.py
rora_agent/rora_agent/agent/: __init__.py  graph.py  prompts.py  state.py  tools.py
rora_agent/rora_agent/executor/: __init__.py  pytest_runner.py
rora_agent/rora_agent/models/: __init__.py  schemas.py
rora_agent/rora_agent/parser/: __init__.py  ast_parser.py  context_gatherer.py
services/: executionService.ts  geminiService.ts  runtimePolyfills.ts
src/: extension.ts
src/codelens/: commands.ts  provider.ts
src/services/: configService.ts  parserService.ts  pythonBridge.ts  testRegistry.ts
